Tue Apr 10 15:16:28 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/coverage.sh: remove system files
	* src/odbc/unittests/describecol.in: relax test

Fri Apr 06 10:52:25 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdssrv.h src/server/login.c src/server/unittest.c:
	- remove warning

Fri Apr 06 10:29:31 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* NEWS src/odbc/unittests/funccall.c src/tds/mem.c:
	* src/tds/query.c:
	- added some notes

Thu Apr 05 16:16:47 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* INSTALL INSTALL.CVS NEWS README doc/userguide.sgml:
	- merge from 0.64

Wed Apr 04 13:39:27 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* NEWS: updated

Wed Apr 04 11:53:20 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdsodbc.h src/ctlib/ct.c src/dblib/rpc.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c src/tds/mem.c:
	* src/tds/token.c src/tds/unittests/dynamic1.c:
	- removed unused paramter from tds_alloc_param_data
	- fix possible problem in prepare_rpc

Wed Apr 04 11:39:12 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* vms/descrip_mms.template: add log.c
	* src/server/query.c: use constants

Wed Apr 04 09:14:47 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: improve slow check

Tue Apr 03 16:23:17 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/dev-cpp/FreeTDS.dev win32/dev-cpp/Makefile.win:
	- updated adding log.c

Mon Apr 02 17:06:43 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: add encryption parameter

Thu Mar 29 16:32:50 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/blk.c: initial fix for bcp state

Thu Mar 29 16:25:24 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/server/login.c src/tds/config.c:
	* src/tds/login.c:
	- added encryption setting in freetds.conf

Thu Mar 29 12:17:34 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>